--- a/redis/redis-cluster@.service
+++ b/redis/redis-cluster@.service
@@ -7,8 +7,5 @@ TimeoutStartSec=0
 ExecStartPre=-/usr/bin/docker create --name redis-cluster-%i-data mediocregopher/redis true
 ExecStartPre=-/usr/bin/docker start redis-cluster-%i-data
 ExecStartPre=-/usr/bin/docker kill redis-cluster-%i
-ExecStart=/usr/bin/docker run --name redis-cluster-%i --rm --volumes-from redis-cluster-%i-data mediocregopher/redis
+ExecStart=/usr/bin/docker run --name redis-cluster-%i --rm --volumes-from redis-cluster-%i-data -v /home/core/redisconf:/redisconf:ro -P mediocregopher/redis redis-server /redisconf/redis.conf
 ExecStop=/usr/bin/docker stop redis-cluster-%i
-
-#[X-Fleet]
-#Conflicts=redis-cluster@*.service
